@@ -1,0 +1,1 @@
+49.17763584,52.38290432,52.823961600000004,54.8580096,48.31696384,61.95756544,65.6193536,67.04674816,64.89272832,63.091179520000004,63.63094528,57.11912448,63.379051520000004,62.236257280000004,62.78619648,0.000110080166015625,0.000116978525390625,7.84172216796875e-05,8.393200195312501e-05,7.6159619140625e-05,4.47410498046875e-05,9.6047333984375e-05,23.85655552,50.67157504,54.60731904,50.306723840000004,52.68736512,56.16232448,65.15271680000001,64.98431488,66.45036032,63.56512768,61.43861248,61.81502976,58.5127168,65.796992,62.95107584,30.304627200000002,8.6152216796875e-05,0.0001053683984375,6.8168193359375e-05,9.0355146484375e-05,4.80371435546875e-05,8.5805166015625e-05,0.00013052169921875,49.12229888,52.38290432,52.823961600000004,54.8580096,48.31696384,61.95756544,65.6193536,67.04674816,64.89272832,63.091179520000004,63.63094528,57.11912448,63.379051520000004,62.236257280000004,62.78619648,0.000110080166015625,0.000116978525390625,7.84172216796875e-05,8.393200195312501e-05,7.6159619140625e-05,4.47410498046875e-05,9.6047333984375e-05,23.85655552,50.67157504,54.60731904,50.306723840000004,52.68736512,56.16232448,65.15271680000001,64.98431488,66.45036032,63.56512768,61.43861248,61.81502976,58.5127168,65.796992,62.95107584,30.304627200000002,8.6152216796875e-05,0.0001053683984375,6.8168193359375e-05,9.0355146484375e-05,4.80371435546875e-05,8.5805166015625e-05,0.00013052169921875
